--- a/main.css
+++ b/main.css
@@ -19,6 +19,10 @@
       font-size: 50px;
       color: #f1f1f1;
     }
+    h2{
+        color: #fff;
+    }
+    
     p {
         color: #f0f0f0;
     }
@@ -37,52 +41,19 @@
         flex: 1;
         text-align: center;
     }
-    .firstimg{
+    .introimg{
         width: 50%;
     }
-    .firstimg img{
+    .introimg img{
         max-height: 1000px;
         width: 100%;
         display: block;
         height: auto;
 	    object-fit: cover;
     }
-    /* Right column */
-    .rightcolumn {
-      float: left;
-      width: 25%;
-      background-color: #f1f1f1;
-      padding-left: 20px;
-    }
-    
-    /* Fake image */
-    .fakeimg {
-      background-color: #aaa;
-      width: 100%;
-      padding: 20px;
-    }
-    
-    /* Add a card effect for articles */
-    .card {
-      background-color: white;
-      padding: 20px;
-      margin-top: 20px;
-    }
-    
-    /* Clear floats after the columns */
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-    
-    /* Footer */
-    .footer {
-      padding: 20px;
-      text-align: center;
-      background: #ddd;
-      margin-top: 20px;
-    }
+   #grey{
+       background-color: rgba(255, 255, 255, 0.5);
+   }
     
     /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
