--- a/nav.css
+++ b/nav.css
@@ -2,129 +2,177 @@
 .navbar{
     width: 100%;
     height: 65px;
+    position: fixed;
     text-align: center;
     line-height: 65px;
-    background-color: #000;
-}
-
-.navcontainer{
-    margin: 0px;
+    background-color: rgb(42, 0, 0, 0.8);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
 }
 
 .navbar div.navheader{
-    width: 300px;
+    float: left;
+    width: 180px;
     height: 10px;
-    position: absolute;
+    padding-left: 3rem;
 }
 
 .navbar div.navheader h1{
     text-decoration: none;
     color: #fff;
-    font-size: 1.5em;
-    margin: 0px;
+    font-size: 2.5em;
 }
 
 
-.navbar div.collapse{
-    width: 500px;
-    height: 10px;
+.navbar div.linklist{
+    height: 65px;
     float: right;
 }
 
-.navbar div.collapse ul{
+.navbar div.linklist ul{
     width:100%;
-    height: 10px;
+    height: 65px;
     display: flex;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.navbar div.collapse ul li{
+.navbar div.linklist ul li{
     width: 120px;
     height: 65px;
+    padding: 0;
+    padding-right: 3rem;
+    font-size: 1em;
 }
 
-.navbar div.collapse ul li a{
+.navbar div.linklist ul li a{
     text-decoration: none;
     color: #fff;
     line-height: 65px;
-    text-transform: uppercase;
+    font-size: 2.4rem;
 }
 
-.navbar div.collapse ul li a:hover{
+.navbar div.linklist ul li a:hover{
     color: #c0c0c0;
 }
 
-.navbar div.media_button {
-    width: 40px;
-    height: 40px;
-    background-color: transparent;
-    position: absolute;
-    right: 15px;
-    top: 12px;
-    display: none;
-}
-
-.navbar div.media_button button.mediabuttons {
-    width: 100%;
-    height: 100%;
-    background-color: transparent;;
-    outline: 0;
-    border: none;
+.buttondiv {
+    width: 30px;
+    height: 25px;
     cursor: pointer;
-}
-
-.navbar div.media_button button.mediabuttons span{
-    width: 98%;
-    height: 1px;
-    display: block;
-    background-color: #fff;
-    margin-top: 9px;
-    margin-bottom: 10px;
-}
-
-.navbar div.media_button button.mediabuttons:hover span:nth-of-type(1){
-    transform: rotateY(180deg);
-    transition: all 0.5s;
-    background-color: #c0c0c0;
-}
-
-.navbar div.media_button button.mediabuttons:hover span:nth-of-type(2){
-    transform: rotateY(180deg);
-    transition: all 0.4s;
-    background-color: #c0c0c0;
-}
-
-.navbar div.media_button button.mediabuttons:hover span:nth-of-type(3){
-    transform: rotateY(180deg);
-    transition: all 0.3s;
-    background-color: #c0c0c0;
-}
-
-.navbar div.media_button button.active span:nth-of-type(1) {
-    transform: rotate3d(0, 0, 1, 45deg);
     position: absolute;
-    margin: 0;
-}
-
-.navbar div.media_button button.active span:nth-of-type(2) {
+    right: 30px;
+    top: 0px;
     display: none;
 }
-
-.navbar div.media_button button.active span:nth-of-type(3) {
-    transform: rotate3d(0, 0, 1, -45deg);
-    position: absolute;
-    margin: 0;
+.buttondiv i {
+    background-color: #fff;
+    border-radius: 2px;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
 }
 
-.navbar div.media_button button.active:hover span:nth-of-type(1) {
+
+.buttondiv i:nth-child(1){
+    animation: outT 0.8s backwards;
+    animation-direction: reverse;
+}
+
+.buttondiv i:nth-child(2){
+    margin: 5px 0;
+    animation: outM 0.8s backwards;
+    animation-direction: reverse;
+}
+
+.buttondiv i:nth-child(3){
+    animation: outBtm 0.8s backwards;
+    animation-direction: reverse;
+}
+
+.buttondiv.active i:nth-child(1) {
+    animation: inT 0.8s forwards;
+}
+
+.buttondiv.active i:nth-child(2) {
+    animation: inM 0.8s forwards;
+}
+
+.buttondiv.active i:nth-child(3) {
+    animation: inBtm 0.8s forwards;
+}
+
+.navbar div.buttondiv button.active:hover span:nth-of-type(1) {
     transform: rotate3d(0, 0, 1, 20deg);
 }
 
-.navbar div.media_button button.active:hover span:nth-of-type(3) {
+.navbar div.buttondiv button.active:hover span:nth-of-type(3) {
     transform: rotate3d(0, 0, 1, -20deg);
 }
-
-
+@keyframes inM {
+    50% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(45deg);
+    }
+}
+@keyframes outM {
+    50% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(45deg);
+    }
+}
+@keyframes inT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
+@keyframes outT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
+@keyframes inBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(-9px) rotate(135deg);
+    }
+}
+@keyframes outBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(-9px) rotate(135deg);
+    }
+}
 /* Media query section */
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -148,41 +196,44 @@
         margin-left: 15px;
     }
     
-    .navbar div.collapse{
+    .navbar div.linklist{
         width: 100%;
-        margin-top: 65px;
         height: 0px;
         overflow: hidden;
     }
     
     .navbar div.show_list{
         height: 200px;
+        display: none;
     }
     
-    .navbar div.collapse ul{
+    .navbar div.linklist ul{
         flex-direction: column;
         width: 100%;
         height: 200px;
         top: 80px;
         right: 0;
         left: 0;
+        bottom: 0;
+        background-color: #111;
+        background-position: center top;
     }
     
-    .navbar div.collapse ul li{
+    .navbar div.linklist ul li{
         width: 100%;
         height: 40px;
-        background-color: #000;
+        background-color: rgba(0,0,0,0.8);
     }
     
-    .navbar div.collapse ul li a{
+    .navbar div.linklist ul li a{
       text-align: center;
-        line-height: 40px;
         width: 100%;
-        height: 40px;
+        font-size: 3rem;
         display: table;
+        padding: 20px;
     }
     
-    .navbar div.media_buttons{
+    .buttondiv{
         display: block;
     }
 }
