--- a/main.css
+++ b/main.css
@@ -75,7 +75,14 @@
        background-color: rgba(255, 255, 255, 0.5);
        margin: 50px;
    }
-    
+   .tables {
+     text-align: center;
+     margin: 50px;
+     padding: 0px;
+     padding-left: 200px;
+     min-height: 75vh;
+   }
+
     /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
       .leftcolumn, .rightcolumn {   
